# dada2-rs

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  justfile  mkdocs.yml  plot_errors.R
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  cleanup.yml  concordance.yml  docker.yml  release.yml
comparison/: run_kmer_sweep.sh  run_rust_errors.sh
comparison/benchmark/: bench_pooled.py  bench_step.R  bench_table.py  run_dada2_pooled.R
comparison/concordance/: README.md  compare_to_reference.py  run_pacbio.sh
comparison/concordance/data/pacbio/: README.md
dev/: compare_bands.py  rebin_quality.py  run_band_sweep.sh  run_cutoff_sweep.sh  run_kmer_sweep.sh
dev/benchmark/: bench_pooled.py  compare_bench.py  compare_tables.py
docs/: about.md  benchmarking.md  citation.md  diagnostics.md  index.md  installation.md  parameters.md  requirements.txt  results.md  walkthrough-illumina.md  walkthrough-pacbio.md
docs/findings/: band-size-platform-defaults.md  index.md  kdist-cutoff-decoupling.md  kmer-size-screening.md
examples/cluster_trace/: README.md  birth_genealogy.py  cluster_size_dist.R  lambda_distribution.R
examples/external_errfun/: README.md  loess_modified.R  loess_reference.R  loess_reference_direct.R  noqual.py  pacbio_reference.R
notes/: kmer_size_pacbio_memory.md  kmer_size_screening.md
scripts/: compare_loess.R  plot_complexity.R  plot_errors.R  plot_quality_profile.R  publish-crate.sh  track_reads.py
src/: chimera.rs  chimera_diagnostics.rs  cli.rs  cluster.rs  cluster_trace.rs  containers.rs  dada.rs  derep.rs  error.rs  error_models.rs  evaluate.rs  filter.rs  filter_trim.rs  kdist_calibrate.rs  kmers.rs  learn_errors.rs  lib.rs  loess.rs  main.rs  merge_pairs.rs  misc.rs  nwalign.rs  pval.rs  remove_bimera.rs  remove_primers.rs  sequence_table.rs  summary.rs  taxonomy.rs  wfa.rs
tests/: dada_pseudo.rs
