[package]
name = "dada2-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
noodles = { version = "0.91", features = ["fastq", "fasta"] }
flate2 = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.18"
rand = { version = "0.8", features = ["small_rng"] }
